# gigaUI

./: .gitignore
src/: CMakeLists.txt  Makefile  cfg.json  gigabutton.c  gigabutton.h  gigacheckbox.c  gigacheckbox.h  gigacolors.h  gigaradiobutton.c  gigaradiobutton.h  gigaslider.c  gigaslider.h  gigatext.c  gigatext.h  gigatoggleswitch.c  gigatoggleswitch.h  gigaui.h  main.c  windows_helpers.c  windows_helpers.h
